[gd_scene load_steps=12 format=3 uid="uid://bo8r234eyusci"]

[ext_resource type="PackedScene" uid="uid://2euhex2dc44q" path="res://src/components/prizes/prize.tscn" id="1"]
[ext_resource type="Resource" uid="uid://brog3gbisctbx" path="res://src/resources/prizes/light.tres" id="3"]
[ext_resource type="Resource" uid="uid://cu2xs8mwxxp5b" path="res://src/resources/prizes/zora.tres" id="4"]
[ext_resource type="Resource" uid="uid://bqqjjkwu08h87" path="res://src/resources/prizes/kokiri.tres" id="5"]
[ext_resource type="Resource" uid="uid://dajtug56lnfb5" path="res://src/resources/prizes/forest.tres" id="6"]
[ext_resource type="Resource" uid="uid://blwtbarafxbe6" path="res://src/resources/prizes/water.tres" id="7"]
[ext_resource type="Resource" uid="uid://pmsepvencob4" path="res://src/resources/prizes/fire.tres" id="8"]
[ext_resource type="Resource" uid="uid://d3bnyh5fnuslf" path="res://src/resources/prizes/spirit.tres" id="9"]
[ext_resource type="Resource" uid="uid://df6tar1b0c3ph" path="res://src/resources/prizes/shadow.tres" id="10"]
[ext_resource type="Resource" uid="uid://duc64uivx3mdv" path="res://src/resources/prizes/goron.tres" id="11"]
[ext_resource type="Script" path="res://src/components/prizes/prizes.gd" id="13"]

[node name="Prizes" type="MarginContainer"]
offset_right = 358.0
offset_bottom = 40.0
size_flags_horizontal = 4
script = ExtResource("13")

[node name="ContextMenu" type="PopupMenu" parent="."]
item_count = 6
item_0/text = "Uncheck All"
item_0/id = 1
item_1/text = ""
item_1/id = 0
item_1/disabled = true
item_1/separator = true
item_2/text = "Clear Medallions"
item_2/id = 2
item_3/text = "Clear Stones"
item_3/id = 3
item_4/text = ""
item_4/id = 0
item_4/disabled = true
item_4/separator = true
item_5/text = "Clear All"
item_5/id = 4

[node name="Icons" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 9

[node name="LightMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("3")

[node name="ForestMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("6")

[node name="FireMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("8")

[node name="WaterMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("7")

[node name="ShadowMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("10")

[node name="SpiritMedallion" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("9")

[node name="KokiriEmerald" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("5")

[node name="GoronRuby" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("11")

[node name="ZoraSapphire" parent="Icons" instance=ExtResource("1")]
custom_minimum_size = Vector2(38, 40)
layout_mode = 2
prize = ExtResource("4")

[connection signal="id_pressed" from="ContextMenu" to="." method="_on_context_menu_id_pressed"]
[connection signal="context_menu_requested" from="Icons/LightMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/ForestMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/FireMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/WaterMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/ShadowMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/SpiritMedallion" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/KokiriEmerald" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/GoronRuby" to="." method="_on_context_menu_requested"]
[connection signal="context_menu_requested" from="Icons/ZoraSapphire" to="." method="_on_context_menu_requested"]
